k8s/challenge4/deployment-trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: tripapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - name: trips
        image: registryoob9604.azurecr.io/tripinsights/trips:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
        volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-admiral-team2-kv"
            nodePublishSecretRef:
              name: secrets-store-creds
        ports:
        - containerPort: 80
          name: trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips
  namespace: tripapi
spec:
  ports:
  - port: 80
  selector:
    app: trips
