k8s/challenge4/deployment-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile
  namespace: tripapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - name: userprofile
        image: registryoob9604.azurecr.io/tripinsights/userprofile:1.0
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - name: secrets-store-inline
          mountPath: "/secrets"
          readOnly: true
        volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-admiral-team2-kv"
            nodePublishSecretRef:
              name: secrets-store-creds
        ports:
        - containerPort: 80
          name: userprofile
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile
  namespace: tripapi
spec:
  ports:
  - port: 80
  selector:
    app: userprofile
